force-app/main/default/objects/ucinn_ascendv2__Financial_Stock_URLs__c/ucinn_ascendv2__Financial_Stock_URLs__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To store Ascend financial stock history URL link</description>
    <label>Financial Stock URLs</label>
</CustomObject>