force-app/main/default/objects/ucinn_ascendv2__Financial_Stock_URLs__c/fields/ucinn_ascendv2__History_Page__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__History_Page__c</fullName>
    <label>History Page</label>
    <type>Url</type>
</CustomField>