force-app/main/default/objects/ucinn_ascendv2__Financial_Stock_URLs__c/fields/ucinn_ascendv2__Is_Current_Finance_URL__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Current_Finance_URL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Current Finance URL</label>
    <type>Checkbox</type>
</CustomField>