force-app/main/default/objects/ucinn_ascendv2__Financial_Stock_URLs__c/fields/ucinn_ascendv2__Title__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>